# magic_mirror

./: Cargo.toml
src/: main.rs
