[package]
name = "magic_mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.13", features = ["headers"] }
axum-macros = "0.2.3"
futures = "0.3.24"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["rt", "macros", "rt-multi-thread"] }
